// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DynamicSelect> empty data: empty 1`] = `
<FormGroup
  label="Label"
>
  <Alert
    isInline={true}
    title="No foos"
    variant="danger"
  >
    <TextContent />
  </Alert>
  <FormSelect
    aria-label="Label"
    className=""
    isDisabled={true}
    isRequired={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    ouiaSafe={true}
    validated="default"
    value=""
  >
    <FormSelectOption
      isDisabled={true}
      isPlaceholder={true}
      label=""
      value=""
    />
  </FormSelect>
  <FormGroupHelperText
    error={null}
    touched={false}
  />
</FormGroup>
`;

exports[`<DynamicSelect> error, touched: shows error 1`] = `
<FormGroup
  label="Label"
>
  <FormSelect
    aria-label="Label"
    className=""
    isDisabled={true}
    isRequired={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    ouiaSafe={true}
    validated="error"
    value=""
  >
    <FormSelectOption
      isDisabled={true}
      label="Must select bar first"
      value=""
    />
  </FormSelect>
  <FormGroupHelperText
    error="Bad!"
    touched={true}
  />
</FormGroup>
`;

exports[`<DynamicSelect> error, untouched: no error 1`] = `
<FormGroup
  label="Label"
>
  <FormSelect
    aria-label="Label"
    className=""
    isDisabled={true}
    isRequired={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    ouiaSafe={true}
    validated="default"
    value=""
  >
    <FormSelectOption
      isDisabled={true}
      label="Must select bar first"
      value=""
    />
  </FormSelect>
  <FormGroupHelperText
    error="Bad!"
    touched={false}
  />
</FormGroup>
`;

exports[`<DynamicSelect> gets data: items 1`] = `
<FormGroup
  label="Label"
>
  <FormSelect
    aria-label="Label"
    className=""
    isDisabled={false}
    isRequired={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    ouiaSafe={true}
    validated="default"
    value=""
  >
    <FormSelectOption
      isDisabled={true}
      isPlaceholder={true}
      label="Select foo"
      value=""
    />
    <FormSelectOption
      key="Foo"
      label="Foo"
      value="Foo"
    />
    <FormSelectOption
      key="Bar"
      label="Bar"
      value="Bar"
    />
  </FormSelect>
  <FormGroupHelperText
    error={null}
    touched={false}
  />
</FormGroup>
`;

exports[`<DynamicSelect> gets data: loading 1`] = `
<FormGroup
  label="Label"
>
  <FormSelect
    aria-label="Label"
    className=""
    isDisabled={true}
    isRequired={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    ouiaSafe={true}
    validated="default"
    value=""
  >
    <FormSelectOption
      isDisabled={true}
      label="Loading..."
      value=""
    />
  </FormSelect>
  <FormGroupHelperText
    error={null}
    touched={false}
  />
</FormGroup>
`;

exports[`<DynamicSelect> resets when selected value no longer valid option: new items 1`] = `
<FormGroup
  label="Label"
>
  <FormSelect
    aria-label="Label"
    className=""
    isDisabled={false}
    isRequired={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    ouiaSafe={true}
    validated="default"
    value=""
  >
    <FormSelectOption
      isDisabled={true}
      isPlaceholder={true}
      label="Select foo"
      value=""
    />
    <FormSelectOption
      key="Bar"
      label="Bar"
      value="Bar"
    />
    <FormSelectOption
      key="Baz"
      label="Baz"
      value="Baz"
    />
  </FormSelect>
  <FormGroupHelperText
    error={null}
    touched={false}
  />
</FormGroup>
`;

exports[`<DynamicSelect> without dependencies: blank 1`] = `
<FormGroup
  label="Label"
>
  <FormSelect
    aria-label="Label"
    className=""
    isDisabled={true}
    isRequired={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    ouiaSafe={true}
    validated="default"
    value=""
  >
    <FormSelectOption
      isDisabled={true}
      label="Must select bar first"
      value=""
    />
  </FormSelect>
  <FormGroupHelperText
    error={null}
    touched={false}
  />
</FormGroup>
`;
